sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subquery-sort-elision__eqp-outer-orderby-not-elided-partial.snap
---
source: subquery-sort-elision.sqltest
expression: |-
  WITH ordered AS (
          SELECT x, y FROM t1 ORDER BY x LIMIT -1
      )
      SELECT * FROM ordered ORDER BY x, y;
info:
  statement_type: WITH (CTE)
  tables:
  - ordered
  - t1
  setup_blocks:
  - elision_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN ordered
|  |--SCAN t1
|  `--USE SORTER FOR ORDER BY
`--USE SORTER FOR ORDER BY
