sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subquery-sort-elision__eqp-window-sort-elided-by-cte-order.snap
---
source: subquery-sort-elision.sqltest
expression: |-
  WITH ordered AS (
          SELECT x, y FROM t1 ORDER BY x LIMIT -1
      )
      SELECT x, SUM(y) OVER (ORDER BY x) AS running
      FROM ordered;
info:
  statement_type: WITH (CTE)
  tables:
  - ordered
  - t1
  setup_blocks:
  - elision_schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN window_subquery_0
   `--SCAN ordered
      |--SCAN t1
      `--USE SORTER FOR ORDER BY
