sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subquery-sort-elision__eqp-window-sort-elided-by-group.snap
---
source: subquery-sort-elision.sqltest
expression: |-
  WITH grouped AS (
          SELECT y, COUNT(*) AS cnt FROM t1 GROUP BY y
      )
      SELECT y, SUM(cnt) OVER (ORDER BY y) AS running
      FROM grouped;
info:
  statement_type: WITH (CTE)
  tables:
  - grouped
  - t1
  setup_blocks:
  - elision_schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN window_subquery_0
   `--SCAN grouped
      |--SCAN t1
      `--USE SORTER FOR GROUP BY
