sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subquery-sort-elision__eqp-window-sort-elided-multi-hop.snap
---
source: subquery-sort-elision.sqltest
expression: |-
  WITH step1 AS (
          SELECT x, y FROM t1 ORDER BY x LIMIT -1
      ),
      step2 AS MATERIALIZED (
          SELECT x, y FROM step1
      )
      SELECT x, SUM(y) OVER (ORDER BY x) AS running
      FROM step2;
info:
  statement_type: WITH (CTE)
  tables:
  - step1
  - step2
  - t1
  setup_blocks:
  - elision_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN step1
|  |--SCAN t1
|  `--USE SORTER FOR ORDER BY
`--SCAN window_subquery_0
   `--SCAN step2
